<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_weather"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_light"
            android:gravity="center"
            android:text="@string/city"
            android:textColor="#BDC4B4"
            android:textSize="30sp"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/inter_extralight"
            android:gravity="start"
            android:text="@string/temp"
            android:textColor="#BDC4B4"
            android:textSize="130sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_light"
            android:gravity="center"
            android:text="Sunny"
            android:textColor="#BDC4B4"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="#BDC4B4"
            android:textSize="32sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/baseline_search_24" />

        <EditText
            android:id="@+id/input_city"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="#BDC4B4"
            android:hint="@string/search_city"
            android:inputType="text"
            android:textColor="#BDC4B4" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="#BDC4B4" />
    </LinearLayout>


    <!--    <com.google.android.material.navigation.NavigationView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:headerLayout="@layout/header"-->
    <!--        app:menu="@menu/main_menu"-->
    <!--        android:id="@+id/nav_view"-->
    <!--        android:layout_gravity="start"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>